api: saving new Element

--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -1,17 +1,17 @@
 <form
-  (submit)="$event.preventDefault()"
-  action=""
-  class="mb-2"
-  encType="multipart/form-data"
-  method="post"
+        (submit)="$event.preventDefault()"
+        action=""
+        class="mb-2"
+        encType="multipart/form-data"
+        method="post"
 >
-  <div class="row g-3 mb-3 align-items-center">
-    <vocabulary class="col-4" />
-    <content-upload class="col-6" />
-    <respect-list-groups class="col-2" />
-  </div>
+    <div class="row g-3 mb-3 align-items-center">
+        <sections class="col-4"/>
+        <content-upload class="col-6"/>
+        <respect-list-groups class="col-2"/>
+    </div>
 
-  <div class="row g-3 mb-3">
-    <languages class="col-12" />
-  </div>
+    <div class="row g-3 mb-3">
+        <languages class="col-12"/>
+    </div>
 </form>
