--- a/frontend/src/app/components/popup/body/form/form.component.html
+++ b/frontend/src/app/components/popup/body/form/form.component.html
@@ -1,22 +1,21 @@
 <form
-  (ngSubmit)="submit($event)"
-  *ngIf="isShow"
-  action=""
-  class="mt-2"
-  method="post"
+        (ngSubmit)="submit($event)"
+        *ngIf="isShow"
+        action=""
+        class="mt-2"
+        method="post"
 >
-  @for (entry of entries; track entry.id) {
-    <form-row [entry]="entry" [index]="$index" (remove)="remove($event)" />
-  }
+    @for (entry of entries; track entry.id) {
+        <form-row [entry]="entry" [index]="$index" (remove)="remove($event)"/>
+    }
 
-  <input [value]="currentEntry.text" name="source" type="hidden" />
-  <input [value]="vocabularyId" name="vocabulary_id" type="hidden" />
-  <input name="action" type="hidden" value="save_translate" />
+    <input [value]="currentEntry.text" name="source" type="hidden"/>
+    <input [value]="sectionId" name="section_id" type="hidden"/>
 
-  <button-saving />
-  <button-save />
+    <button-saving/>
+    <button-save/>
 </form>
 
 @if (entriesFoundInPast) {
-  <div [innerHTML]="entriesFoundInPast"></div>
+    <div [innerHTML]="entriesFoundInPast"></div>
 }
