front: duplicates finish

--- a/frontend/src/app/components/popup/body/duplicates/duplicates.component.html
+++ b/frontend/src/app/components/popup/body/duplicates/duplicates.component.html
@@ -12,7 +12,7 @@
             <tr [class]="entry.isOdd ? 'odd' : 'even'">
                 <td><strong>{{ entry.name }}</strong></td>
                 <td>{{ entry.translation }}</td>
-                <td>{{ entry.context }}</td>
+                <td [innerHTML]="entry.context"></td>
                 <td>{{ entry.path }}</td>
             </tr>
         }
