--- a/frontend/src/app/components/popup/body/body.component.html
+++ b/frontend/src/app/components/popup/body/body.component.html
@@ -1,15 +1,21 @@
 <div class="modal-body">
-  @if (isInSavingMode | async) {
-    <popup-translations />
-    <popup-form />
-  } @else {
-    <div class="modal-center">
-      <div class="wrapper">
-        <p class="translate-on-select py-2 fs-1 border-bottom">
-          {{ text }}
-        </p>
-        <popup-translations />
-      </div>
-    </div>
-  }
+    @if (isInSavingMode | async) {
+        <popup-translations/>
+        <popup-form/>
+    } @else {
+        <div class="modal-center">
+            @if (!isInEditingMode) {
+                <div class="wrapper">
+                    <p class="translate-on-select py-2 fs-1 border-bottom">
+                        {{ entry.text }}
+                    </p>
+                    <popup-translations/>
+                </div>
+            } @else {
+                <div class="w-100">
+                    <edit/>
+                </div>
+            }
+        </div>
+    }
 </div>
