--- a/frontend/src/app/components/popup/footer/footer.component.html
+++ b/frontend/src/app/components/popup/footer/footer.component.html
@@ -1,7 +1,16 @@
 <div class="modal-footer justify-content-center py-4">
-  <div class="d-flex gap-3">
-    <popup-button-previous />
-    <popup-button-translate />
-    <popup-button-next />
-  </div>
+    <div class="me-auto" style="width: 75px;"></div>
+    <div class="d-flex gap-3">
+        <popup-button-previous/>
+        <popup-button-translate/>
+        <popup-button-next/>
+    </div>
+    <div class="ms-auto">
+        @if (!isInEditingMode) {
+            <popup-button-edit/>
+        } @else {
+            <popup-button-save/>
+        }
+    </div>
+
 </div>
