Elements: mass delete

--- a/backend/resources/css/app.css
+++ b/backend/resources/css/app.css
@@ -15,3 +15,8 @@ input[type="checkbox"]:hover {
 .page-item a {
     text-decoration: underline;
 }
+
+.form-check-input {
+    vertical-align: middle;
+    margin: 0;
+}
