--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -5,13 +5,20 @@
         encType="multipart/form-data"
         method="post"
 >
-    <div class="row g-3 mb-3 align-items-center">
-        <sections class="col-4"/>
-        <content-upload class="col-6"/>
-        <respect-list-groups class="col-2"/>
-    </div>
+    @if (mode === 'Read') {
+        <div class="row g-3 mb-3 align-items-center">
+            <sections class="col-4"/>
+            <content-upload class="col-6"/>
+            <respect-list-groups class="col-2"/>
+        </div>
 
-    <div class="row g-3 mb-3">
-        <languages class="col-12"/>
-    </div>
+        <div class="row g-3 mb-3">
+            <languages class="col-12"/>
+        </div>
+    } @else {
+        <div class="row mb-3">
+            <sections/>
+        </div>
+    }
+
 </form>
