--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -16,8 +16,10 @@
             <languages class="col-12"/>
         </div>
     } @else {
-        <div class="row mb-3">
-            <sections/>
+        <div class="row mb-4">
+            <div class="col-10">
+                <sections/>
+            </div>
         </div>
     }
 
