--- a/frontend/src/app/components/list/list.component.html
+++ b/frontend/src/app/components/list/list.component.html
@@ -1,13 +1,5 @@
-@if (isEntriesLoaded) {
-  <div class="d-flex flex-grow-1 justify-content-center flex-wrap border py-3">
-    <div class="ajax-translate col-8">
-      @for (entry of entries; track entry.id) {
-        <item [entry]="entry" [index]="$index"></item>
-      }
-    </div>
-  </div>
-
-  <controls
-    class="btn_controls offset-10 col-2 d-flex flex-column gap-3 px-4"
-  />
+@if (state.isModeRead()) {
+    <list-read/>
+} @else {
+    <list-memorize/>
 }
