--- a/frontend/src/app/components/list/memorize/controls/controls.component.html
+++ b/frontend/src/app/components/list/memorize/controls/controls.component.html
@@ -1,1 +1,3 @@
-<button-next class="btn btn-lg btn-outline-light" id="btn_control_next"/>
+<button-begin class="btn btn-lg btn-outline-light"/>
+<button-shuffle class="btn btn-lg btn-outline-light"/>
+<button-next class="btn btn-lg btn-outline-light"/>
