--- a/frontend/src/app/components/list/memorize/list-memorize.component.html
+++ b/frontend/src/app/components/list/memorize/list-memorize.component.html
@@ -17,5 +17,8 @@
             }
         </div>
     </div>
-    <controls class="btn_controls offset-10 col-2 d-flex flex-column gap-3 px-4"/>
+    <controls
+            *ngIf="entries.length"
+            class="btn_controls offset-10 col-2 d-flex flex-column gap-3 px-4"
+    />
 </div>
