Split popups by mode

--- a/frontend/src/app/components/list/memorize/controls/controls.component.html
+++ b/frontend/src/app/components/list/memorize/controls/controls.component.html
@@ -1,3 +1,4 @@
 <button-begin class="btn btn-lg btn-outline-light"/>
+<button-popup-memo class="btn btn-lg btn-outline-light"/>
 <button-shuffle class="btn btn-lg btn-outline-light"/>
 <button-next class="btn btn-lg btn-outline-light"/>
