--- a/frontend/src/app/components/popup/popup.component.html
+++ b/frontend/src/app/components/popup/popup.component.html
@@ -1,5 +1,5 @@
 <div class="modal ajax-translate">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered" [class]="className">
         <div class="modal-content">
 
             <div class="modal-header">
