--- a/frontend/src/app/components/list/memo/popup/popup.component.html
+++ b/frontend/src/app/components/list/memo/popup/popup.component.html
@@ -1,3 +1,3 @@
-<popup>
-    <h1 ngProjectAs="header">Hello from Memo</h1>
+<popup className="modal-fullscreen">
+    <popup-header-memo ngProjectAs="header"/>
 </popup>
