--- a/frontend/src/app/components/list/read/popup/popup.component.html
+++ b/frontend/src/app/components/list/read/popup/popup.component.html
@@ -1,3 +1,5 @@
 <popup className="modal-fullscreen">
     <popup-header-read ngProjectAs="header"/>
+    <popup-body-read ngProjectAs="body"/>
+    <popup-footer-read ngProjectAs="footer"/>
 </popup>
