Move wheel even handler to read list

--- a/frontend/src/app/components/list/read/list-read.component.html
+++ b/frontend/src/app/components/list/read/list-read.component.html
@@ -10,4 +10,7 @@
         class="btn_controls offset-10 col-2 d-flex flex-column gap-3 px-4"
 />
 
-<popup-read/>
+@if (entries.length) {
+    <popup-read/>
+}
+
