--- a/frontend/src/app/components/list/memo/controls/controls.component.html
+++ b/frontend/src/app/components/list/memo/controls/controls.component.html
@@ -1,4 +1,4 @@
-<button-begin class="btn btn-lg btn-outline-light"/>
-<button-popup-memo class="btn btn-lg btn-outline-light"/>
-<button-shuffle class="btn btn-lg btn-outline-light"/>
-<button-next class="btn btn-lg btn-outline-light"/>
+<button-begin (click)="goBegin()" class="btn btn-lg btn-outline-light"/>
+<button-popup-memo (click)="showPopup()" class="btn btn-lg btn-outline-light"/>
+<button-shuffle (click)="shuffle()" class="btn btn-lg btn-outline-light"/>
+<button-next (click)="goNext()" class="btn btn-lg btn-outline-light"/>
