--- a/frontend/src/app/components/list/memo/list-memo.component.html
+++ b/frontend/src/app/components/list/memo/list-memo.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-10">
+    <div class="col-10" data-shuffled>
         <div class="container position-relative">
             @for (entry of entries; track entry.id) {
                 <div
@@ -20,6 +20,7 @@
     <controls
             *ngIf="entries.length"
             class="btn_controls offset-10 col-2 d-flex flex-column gap-3 px-4"
+            (shuffled)="shuffle()"
     />
 </div>
 
