--- a/frontend/src/app/components/list/read/controls/controls.component.html
+++ b/frontend/src/app/components/list/read/controls/controls.component.html
@@ -1,3 +1,3 @@
-<button-popup-save class="btn btn-lg btn-outline-light"/>
-<button-translate class="btn btn-lg btn-outline-light"/>
-<button-next class="btn btn-lg btn-outline-light" id="btn_control_next"/>
+<button-popup-save (click)="showPopup()" class="btn btn-lg btn-outline-light"/>
+<button-translate (click)="translate()" class="btn btn-lg btn-outline-light"/>
+<button-next (click)="goNext()" class="btn btn-lg btn-outline-light" id="btn_control_next"/>
