--- a/frontend/src/app/components/list/read/popup/footer/controls/button-save/button-save.component.html
+++ b/frontend/src/app/components/list/read/popup/footer/controls/button-save/button-save.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-outline-light" (click)="save()" style="width: 80px;">
+<button class="btn btn-outline-light" style="width: 80px;">
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-floppy"
          viewBox="0 0 16 16" style="margin-top: -4px">
         <path d="M11 2H9v3h2z"/>
