--- a/frontend/src/app/components/list/read/popup/header/header.component.html
+++ b/frontend/src/app/components/list/read/popup/header/header.component.html
@@ -1,5 +1,5 @@
 @if ((isInSavingMode | async) === false) {
-    <stats [state]="readService"/>
+    <stats [state]="state"/>
 } @else {
     <h5 class="modal-title translate-on-select text-center fs-1">
         {{ text }}
