Memo: edit popup: visibility

--- a/frontend/src/app/components/list/memo/controls/controls.component.html
+++ b/frontend/src/app/components/list/memo/controls/controls.component.html
@@ -12,6 +12,7 @@
                 class="btn btn-lg btn-outline-light"
                 title="Open in popup (strict)"
         />
+        <button-visibility (click)="visibility()" class="btn btn-lg btn-outline-light" title="Visibility"/>
         <button-shuffle (click)="shuffle()" class="btn btn-lg btn-outline-light" title="Shuffle"/>
         <button-next (click)="goNext()" class="btn btn-lg btn-outline-light" title="Go next"/>
     </ng-container>
