--- a/frontend/src/app/components/list/memo/popup-edit/popup.component.html
+++ b/frontend/src/app/components/list/memo/popup-edit/popup.component.html
@@ -1,4 +1,4 @@
-<popup>
+<popup className="modal-lg">
     <h5 class="modal-title fs-5 ps-4 text-center"
         style="min-height: 1.5em;"
         ngProjectAs="header"
