--- a/frontend/src/app/components/list/memo/controls/button-settings/button-settings.component.html
+++ b/frontend/src/app/components/list/memo/controls/button-settings/button-settings.component.html
@@ -1,4 +1,4 @@
-<a href="/admin/" class="btn btn-lg btn-outline-light d-block" title="Settings">
+<a href="/admin/" class="btn btn-lg btn-outline-light d-block" title="Settings" target="_blank">
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear"
          viewBox="0 0 16 16">
         <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"/>
