--- a/frontend/src/app/components/list/read/list-read.component.html
+++ b/frontend/src/app/components/list/read/list-read.component.html
@@ -1,16 +1,14 @@
-<div class="d-flex flex-grow-1 justify-content-center flex-wrap border py-3">
-    <div class="ajax-translate col-8">
-        @for (entry of entries; track entry.id) {
-            <item [entry]="entry" [index]="$index"></item>
-        }
-    </div>
-</div>
-
-<controls
-        class="btn_controls offset-10 col-2 d-flex flex-column gap-3 px-4"
-/>
-
 @if (entries.length) {
+    <div class="col-10 d-flex justify-content-center border">
+        <div class="ajax-translate px-4">
+            @for (entry of entries; track entry.id) {
+                <item [entry]="entry" [index]="$index"></item>
+            }
+        </div>
+    </div>
+
+    <controls class="col-2 btn_controls"/>
+
     <popup-read/>
 }
 
