--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -148,7 +148,8 @@ table#matched_entries {
 }
 
 .btn_controls {
-    position: sticky;
+    position: fixed;
+    right: 8%;
     bottom: 20px;
 }
 
