--- a/frontend/src/app/components/list/memo/list-memo.component.html
+++ b/frontend/src/app/components/list/memo/list-memo.component.html
@@ -18,7 +18,7 @@
             }
         </div>
     </div>
-    <controls (shuffled)="shuffle()" class="btn_controls"/>
+    <controls (shuffled)="shuffle()" class="col-2 btn_controls"/>
 </div>
 
 @if (state.isShowMemoPopup) {
