memo/popup/edit: submit on enter

--- a/frontend/src/app/components/list/memo/popup-edit/popup.component.html
+++ b/frontend/src/app/components/list/memo/popup-edit/popup.component.html
@@ -13,6 +13,7 @@
                       rows="4"
                       [(ngModel)]="entry.context"
                       name="context"
+                      (keydown.enter)="submit($event)"
             ></textarea>
             <input type="hidden" name="_method" value="PUT">
         </form>
