memo/list: refactor

--- a/frontend/src/app/components/list/memo/list-memo.component.html
+++ b/frontend/src/app/components/list/memo/list-memo.component.html
@@ -25,9 +25,9 @@
     <popup-memo/>
 }
 @if (state.isShowEditPopup) {
-    <popup-edit [entry]="state.editedEntry"/>
+    <popup-edit [entry]="state.currentEntry"/>
 }
 @if (state.isShowShowPopup) {
-    <popup-show [entry]="state.editedEntry"/>
+    <popup-show [entry]="state.currentEntry"/>
 }
 
