Backend: aside links (top)

--- a/backend/resources/css/app.css
+++ b/backend/resources/css/app.css
@@ -20,3 +20,12 @@ input[type="checkbox"]:hover {
     vertical-align: middle;
     margin: 0;
 }
+
+.brand-text a {
+    color: white;
+    text-decoration: none;
+}
+
+.brand-text a:hover {
+    color: #999;
+}
