Memo: orange color

--- a/frontend/src/app/components/list/memo/popup-show/popup.component.html
+++ b/frontend/src/app/components/list/memo/popup-show/popup.component.html
@@ -6,7 +6,7 @@
 
     <div ngProjectAs="body">
         <p class="text-center fs-3 mb-4">{{ entry.translations }}</p>
-        <p class="fs-5" [innerHTML]="entry.context"></p>
+        <p class="fs-5 style-strong-tag" [innerHTML]="entry.context"></p>
     </div>
 
 </popup>
