--- a/frontend/src/app/components/list/read/controls/controls.component.html
+++ b/frontend/src/app/components/list/read/controls/controls.component.html
@@ -1,4 +1,4 @@
-<div class="col-8 d-flex flex-column gap-3 px-4">
+<div class="d-flex flex-column gap-3 px-4">
     <button-settings/>
     @if (state.entries.length) {
         <button-popup-save (click)="showPopup()" class="btn btn-lg btn-outline-light"/>
