--- a/frontend/src/app/components/head/head.component.html
+++ b/frontend/src/app/components/head/head.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between mb-3">
+<div class="d-flex justify-content-between pt-3 mb-3">
     <app-title/>
     <app-mode/>
 </div>
