--- a/frontend/src/app/components/list/read/list-read.component.html
+++ b/frontend/src/app/components/list/read/list-read.component.html
@@ -1,11 +1,20 @@
-@if (entries.length) {
-    <div class="col-10 d-flex justify-content-center border">
-        <div class="ajax-translate px-4">
-            @for (entry of entries; track entry.id) {
-                <item [entry]="entry" [index]="$index"></item>
-            }
-        </div>
+<div class="container">
+    <div class="row align-items-center">
+        @if (entries.length) {
+            <div class="col-9 col-lg-10 d-flex justify-content-center border fixed-list">
+                <div class="ajax-translate px-4">
+                    @for (entry of entries; track entry.id) {
+                        <item [entry]="entry" [index]="$index"></item>
+                    }
+                </div>
+            </div>
+        } @else {
+            <div class="col-10"></div>
+        }
+        <controls class="col-3 col-lg-2 btn_controls"/>
     </div>
+</div>
+
+@if (entries.length) {
     <popup-read/>
 }
-<controls class="col-2 btn_controls"/>
