--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -6,17 +6,17 @@
         method="post"
 >
     @if (mode === 'Read') {
-        <div class="row g-3 mb-3 align-items-center">
+        <div class="row gx-3 mb-3 align-items-center">
             <sections class="col-4"/>
             <content-upload class="col-6"/>
             <respect-list-groups class="col-2"/>
         </div>
 
-        <div class="row g-3 mb-3">
+        <div class="row gx-3 mb-3">
             <languages class="col-12"/>
         </div>
     } @else {
-        <div class="row mb-4">
+        <div class="row mb-3">
             <div class="col-10">
                 <sections/>
             </div>
