--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -147,10 +147,11 @@ table#matched_entries {
     padding-top: 8px;
 }
 
-.btn_controls {
-    position: fixed;
-    right: 8%;
-    bottom: 20px;
+.fixed-list {
+    /*max-height: calc(100vh - 140px);*/
+    max-height: calc(100vh - 272px);
+    overflow: auto;
+    align-self: start;
 }
 
 .simple_trainer .body .item {
