Show/hide elements on different breakpoints

--- a/frontend/src/app/components/list/memo/list-memo.component.html
+++ b/frontend/src/app/components/list/memo/list-memo.component.html
@@ -1,5 +1,9 @@
 <div class="row align-items-center">
-    <div class="col-10 fixed-list" data-shuffled>
+    <div
+            class="col-10 fixed-list"
+            data-shuffled
+            style="max-height: calc(100vh - 140px);"
+    >
         <div class="container position-relative">
             @for (entry of entries; track entry.id) {
                 <div
