--- a/frontend/src/app/components/list/read/list-read.component.html
+++ b/frontend/src/app/components/list/read/list-read.component.html
@@ -1,7 +1,12 @@
-<div class="container">
+<div class="container-lg">
+
+    <div class="row d-md-none">
+        <controls class="d-flex justify-content-center mb-4"/>
+    </div>
+
     <div class="row align-items-center">
         @if (entries.length) {
-            <div class="col-9 col-lg-10 d-flex justify-content-center border fixed-list">
+            <div class="col-md-10 d-flex justify-content-center border fixed-list">
                 <div class="ajax-translate px-4">
                     @for (entry of entries; track entry.id) {
                         <item [entry]="entry" [index]="$index"></item>
@@ -9,9 +14,9 @@
                 </div>
             </div>
         } @else {
-            <div class="col-10"></div>
+            <div class="col-md-10"></div>
         }
-        <controls class="col-3 col-lg-2 btn_controls"/>
+        <controls class="col-md-2 d-none d-md-block btn_controls"/>
     </div>
 </div>
 
