--- a/frontend/src/app/components/list/read/popup/body/form/form-row/form-row.component.html
+++ b/frontend/src/app/components/list/read/popup/body/form/form-row/form-row.component.html
@@ -1,6 +1,6 @@
-<div class="row g-2 align-items-center mb-3">
+<div class="row g-3 align-items-center mb-3">
     <div class="col-4">
-        <div class="row align-items-center">
+        <div class="row flex-nowrap align-items-center">
             <div class="col-1 d-flex justify-content-center">
                 <input
                         class="form-check-input"
