--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -7,12 +7,12 @@
 >
     @if (mode === 'Read') {
         <div class="row gx-3 mb-3 align-items-center">
-            <sections class="col-4"/>
-            <content-upload class="col-6"/>
-            <respect-list-groups class="col-2"/>
+            <sections class="col-12 col-md-4"/>
+            <content-upload class="d-none d-md-block col-6"/>
+            <respect-list-groups class="d-none d-lg-block col-2"/>
         </div>
 
-        <div class="row gx-3 mb-3">
+        <div class="row gx-3 mb-3 d-none d-lg-block">
             <languages class="col-12"/>
         </div>
     } @else {
