--- a/frontend/src/app/components/list/memo/controls/controls.component.html
+++ b/frontend/src/app/components/list/memo/controls/controls.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column gap-3 px-4">
+<div class="d-flex flex-column gap-3">
     <button-settings/>
     <ng-container *ngIf="state.entries.length">
         <button-begin (click)="goBegin()" class="btn btn-lg btn-outline-light" title="Go to begin"/>
