--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -12,7 +12,7 @@
             <respect-list-groups class="d-none d-lg-block col-2"/>
         </div>
 
-        <div class="row gx-3 mb-3 d-none d-lg-block">
+        <div class="row gx-3 mb-3">
             <languages class="col-12"/>
         </div>
     } @else {
