Remove "fixed-list" class

--- a/frontend/src/app/components/list/memo/list-memo.component.html
+++ b/frontend/src/app/components/list/memo/list-memo.component.html
@@ -1,6 +1,6 @@
 <div class="row align-items-center">
     <div
-            class="col-10 fixed-list"
+            class="col-10"
             data-shuffled
             style="max-height: calc(100vh - 140px);"
     >
