--- a/frontend/src/app/components/list/read/list-read.component.html
+++ b/frontend/src/app/components/list/read/list-read.component.html
@@ -6,7 +6,7 @@
 
     <div class="row align-items-center">
         @if (entries.length) {
-            <div class="col-md-10 d-flex justify-content-center border fixed-list">
+            <div class="col-md-10 d-flex justify-content-center border">
                 <div class="ajax-translate px-4">
                     @for (entry of entries; track entry.id) {
                         <item [entry]="entry" [index]="$index"></item>
