Fix: content-upload on mobile

--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -8,7 +8,7 @@
     @if (mode === 'Read') {
         <div class="row gx-3 mb-3 align-items-center">
             <sections class="col-12 col-md-4"/>
-            <content-upload class="d-none d-md-block col-6"/>
+            <content-upload class="col-12 col-md-6 mt-4 mt-md-0"/>
             <respect-list-groups class="d-none d-lg-block col-2"/>
         </div>
 
